--- a/from_meteor_book/experinode.css
+++ b/from_meteor_book/experinode.css
@@ -4,9 +4,15 @@ body{
 }
 #login_bar{
 	position: fixed;
-	padding: 20px 30px 0px 0px;
+	padding: 12px 30px 0px 0px;
 	right: 0px;
 	top: 0px;
+}
+#create_node{
+	position: fixed;
+	/*padding: 20px 30px;*/
+	right: 105px;
+	top: 5px;
 }
 .main_container{
 	width: 900px;
